# Evidencia2_Algoritmos5to

./: .gitignore  CMakeLists.txt  evidencia2  evidencia2.cpp  evidencia2.h  evidencia2_helpers.cpp  input.txt  sonar-project.properties
.github/workflows/: cmake-tests.yml
test/: CMakeLists.txt  test_evidencia2.cpp  test_wrapper.h
